--- a/public/templates/category.hbs
+++ b/public/templates/category.hbs
@@ -5,7 +5,7 @@
   </ol>
   <h1>{{name}}</h1>
   {{#each products}}
-    <div class="panel panel-default">
+    <div class="panel panel-simple">
       <div class="panel-body">
         <h4 class="category-name">
           <img src="{{thumbnail}}" class="img-rounded" height="30"/>
@@ -15,7 +15,7 @@
         </h4>
       </div>
       <div class="panel-footer clearfix">
-        <span class="badge badge-green"># of Reviews</span>
+        <span class="panel-footer-count pull-right"># of Reviews</span>
       </div>
     </div>
   {{/each}}
