fixed overflowing images on index more tweaks

--- a/public/templates/categories.hbs
+++ b/public/templates/categories.hbs
@@ -27,7 +27,7 @@
         </div>
         <div class="panel-footer clearfix">
           <span class="panel-footer-count pull-right">{{products.length}} Products</span>
-          <div class="overflow-wrapper">
+          <div class="panel-imgs">
             {{#each products}}
               <a href="/#/products/{{id}}" data-toggle="tooltip" title="{{name}}" data-placement="bottom">
                 <img src="{{thumbnail}}" class="panel-img" height="20"/>
