--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -381,4 +381,4 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
     width:40px;
     margin-right:-4px;
     border-radius:0; 
-
+}
