--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -385,3 +385,38 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
     margin-right:-4px;
     border-radius:0; 
 }
+
+.hashtag{
+    font-size: 1.4ex;
+    font-weight: 100;
+    font-family: 'Roboto Condensed';
+    padding: 1ex;
+    color: #99B898;
+}
+
+.overlay{
+    position:absolute;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,.1);
+    text-align:center;
+    opacity:0;
+    -webkit-transition: opacity .25s ease;
+    -moz-transition: opacity .25s ease;
+}
+
+.review-item {
+    overflow:hidden;
+}
+
+.agree{
+    font-size: 2em;
+    font-family: 'Montserrat', sans-serif;
+    color:rgba(255,255,255,.9)
+}
+
+.review-item:hover .overlay{
+    opacity:1;
+}
