--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -30,30 +30,12 @@
         </div>
         <div class="row">
             <div class="col-xs-6">
-                <div id="positive" class="list-group">
-                  <h3>Positive Reviews</h3>
-                  {{#each positiveReviews}}
-                    <a href="" class="list-group-item list-group-item-success">
-                        <span class="badge">{{count}}</span>
-                        {{text}}
-                    </a>
-                  {{else}}
-                    <div class="well">There are no positive reviews.</div>
-                  {{/each}}
-                </div>
+                <h3>Positive Reviews</h3>
+                <div id="positive" class="list-group"></div>
             </div>
             <div class="col-xs-6">
                 <h3>Negative Reviews</h3>
-                <div id="negative" class="list-group">
-                  {{#each negativeReviews}}
-                    <a href="" class="list-group-item list-group-item-danger">
-                        <span class="badge">{{count}}</span>
-                        {{text}}
-                    </a>
-                    {{else}}
-                      <div class="well">There are no negative reviews.</div>
-                  {{/each}}
-                </div>
+                <div id="negative" class="list-group"></div>
             </div>
         </div>
 
