fix #each iterator error

--- a/public/templates/categories.hbs
+++ b/public/templates/categories.hbs
@@ -15,7 +15,7 @@
   </form>
 
   <div class="halves">
-    {{#each}}
+    {{#each categories}}
     <div class="grid-cell">
       <div class="panel panel-simple">
         <div class="panel-body">
