--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -49,11 +49,11 @@
                 <div id="videos" class="scrolls">
                 </div>
                 <div class="text-center">
-                    <div class="panel panel-default" id="youtube-info">
-                        <div class="panel-heading">
-                            <h3 class="panel-title" id="youtube-title"></h3>
-                        </div>
-                        <div class="panel-body" id="youtube-body">
+                    <div class="well well-simple well-simple-info" id="youtube-info">
+                        <h3 id="youtube-title" class="well-simple-title"></h3><br />
+                        <div id="youtube-body" class="well-simple-body">
+                            <div class="pull-left"><h4><span id="youtube-youtuber"></span><h4></div>
+                            <div class="pull-right"><h4><span id="youtube-views"></span> Views<h4></div>
                         </div>
                     </div>
                 </div>
