added info to instagram carousel, closes #60

--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -52,12 +52,11 @@
                     <div class="well well-simple well-simple-info" id="youtube-info">
                         <h3 id="youtube-title" class="well-simple-title"></h3><br />
                         <div id="youtube-body" class="well-simple-body">
-                            <div class="pull-left"><h4><span id="youtube-youtuber"></span><h4></div>
-                            <div class="pull-right"><h4><span id="youtube-views"></span> Views<h4></div>
+                            <div class="pull-left"><h4><span id="youtube-youtuber"></span></h4></div>
+                            <div class="pull-right"><h4><span id="youtube-views"></span> Views</h4></div>
                         </div>
                     </div>
                 </div>
-
                 <div class="text-center">
                     <div id="video-buttons" class="btn-group btn-group-md">
                       <button class="left btn btn-default">
@@ -76,6 +75,15 @@
             <h3>Instagram</h3>
               <div id="instagram" class="scrolls">
               </div>
+                <div class="text-center">
+                    <div class="well well-simple well-simple-info" id="youtube-info">
+                        <h3 id="insta-desc" class="well-simple-title"></h3><br />
+                        <div id="insta-body" class="well-simple-body">
+                            <div class="pull-left"><h4>@<span id="insta-user"></span></h4></div>
+                            <div class="pull-right"><h4><span id="insta-likes"></span> Likes</h4></div>
+                        </div>
+                    </div>
+                </div>
             <div class="text-center">
                 <div id="instagram-buttons" class="btn-group btn-group-md">
                   <button class="left btn btn-default">
