--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -469,3 +469,11 @@ a.list-group-item-negative:hover{
     font-family: 'Montserrat', sans-serif;
     font-size:3em
 }
+
+.cloud9-item{
+    -webkit-transition: opacity .25s ease;
+    -moz-transition: opacity .25s ease;
+    -webkit-box-shadow: 5px 5px 20px 1px rgba(42,54,59,0.4);
+    -moz-box-shadow: 5px 5px 20px 1px rgba(42,54,59,0.4);
+    box-shadow: 5px 5px 20px 1px rgba(42,54,59,0.4);
+}
