--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -52,8 +52,8 @@
                     <div class="well well-simple well-simple-info" id="youtube-info">
                         <h3 id="youtube-title" class="well-simple-title"></h3><br />
                         <div id="youtube-body" class="well-simple-body">
-                            <div class="pull-left"><h4><span id="youtube-youtuber"></span></h4></div>
-                            <div class="pull-right"><h4><span id="youtube-views"></span> Views</h4></div>
+                            <div class="pull-left"><h4 id="youtube-label"><span id="youtube-youtuber"></span></h4></div>
+                            <div class="pull-right"><h4 id="youtube-label"><span id="youtube-views"></span> Views</h4></div>
                         </div>
                     </div>
                 </div>
@@ -76,11 +76,11 @@
               <div id="instagram" class="scrolls">
               </div>
                 <div class="text-center">
-                    <div class="well well-simple well-simple-info" id="youtube-info">
+                    <div class="well well-simple well-simple-info" id="insta-info">
                         <h3 id="insta-desc" class="well-simple-title"></h3><br />
                         <div id="insta-body" class="well-simple-body">
-                            <div class="pull-left"><h4>@<span id="insta-user"></span></h4></div>
-                            <div class="pull-right"><h4><span id="insta-likes"></span> Likes</h4></div>
+                            <div class="pull-left"><h4 class="insta-label">@<span id="insta-user"></span></h4></div>
+                            <div class="pull-right"><h4 class="insta-label"><span id="insta-likes"></span> Likes</h4></div>
                         </div>
                     </div>
                 </div>
