--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,8 +15,9 @@
     }
     body .grid-cell{
         width: 100%;
-        margin-right:auto;
-        margin-left:auto;
+        margin-right:1%;
+        margin-left:1%;
+        position: absolute;
 
     }
 
