--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,8 +15,7 @@
     }
     body .grid-cell{
         width: 100%;
-        margin-right:1%;
-        margin-left:1%;
+        margin:0;
         position: absolute;
 
     }
