--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -59,10 +59,10 @@
                 </div>
                 <div class="text-center">
                     <div id="video-buttons" class="btn-group btn-group-md">
-                      <button class="left btn btn-default">
+                      <button class="left btn btn-simple">
                         ‹
                       </button>
-                      <button class="right btn btn-default">
+                      <button class="right btn btn-simple">
                         ›
                       </button>
                     </div>
@@ -86,10 +86,10 @@
                 </div>
             <div class="text-center">
                 <div id="instagram-buttons" class="btn-group btn-group-md">
-                  <button class="left btn btn-default">
+                  <button class="left btn btn-simple">
                     ‹
                   </button>
-                  <button class="right btn btn-default">
+                  <button class="right btn btn-simple">
                     ›
                   </button>
                 </div>
