--- a/public/templates/product.hbs
+++ b/public/templates/product.hbs
@@ -30,7 +30,7 @@
 
         <div class="row">
             <div class="col-xs-6">
-                <form id='add-positive' class="form-inline text-center">
+                <form id='add-positive' class="add-review form-inline text-center">
                     <input type="text" name="text" class="add-review form-control input-lg" id="positive-input" placeholder="Add a positive review">
                     <button id="add-positive" class="btn btn-default hide">Add</button>
                 </form>
