more review section updates fixes #72

--- a/public/templates/review-list-item.hbs
+++ b/public/templates/review-list-item.hbs
@@ -1,5 +1,5 @@
 <a href="" class="list-group-item list-group-item-{{type}} review-item">
-  <span class="badge">{{count}}</span>
+  <span class="badge badge-simple">{{count}}</span>
   {{text}}
   <div class="overlay">
     <span class="agree">FACT!</span>
