--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -444,10 +444,15 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
     opacity:0;
     -webkit-transition: opacity .25s ease;
     -moz-transition: opacity .25s ease;
+    box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
+    -webkit-box-shadow: inset 0 -4px 0 rgba(0,0,0,0.2);
 }
 
 .review-item {
+    font-size:2.4ex;
     overflow:hidden;
+    box-shadow: inset 0 -4px 0 rgba(0,0,0,0.1);
+    -webkit-box-shadow: inset 0 -4px 0 rgba(0,0,0,0.1);
 }
 
 .agree{
@@ -547,7 +552,21 @@ a.list-group-item-negative:hover{
     font-family: "Roboto Condensed", Helvetica, Arial, sans-serif;
     border-radius: 15px;
     -webkit-border-radius: 15px;
-    box-shadow: inset 0 -4px 0 rgba(255,255,255,0.2);
-    -webkit-box-shadow: inset 0 -4px 0 rgba(255,255,255,0.2);
+    box-shadow: inset 0 -4px 0 rgba(255,255,255,0.1);
+    -webkit-box-shadow: inset 0 -4px 0 rgba(255,255,255,0.1);
 }
 
+.add-review:hover{
+    border-radius: 16px;
+    -webkit-border-radius: 16px;
+    -webkit-transition: opacity .25s ease;
+    -moz-transition: opacity .25s ease;
+    box-shadow: inset 0 -4px 0 rgba(255,255,255,0.2);
+    -webkit-box-shadow: inset 0 -4px 0 rgba(255,255,255,0.3);
+}
+
+.badge-simple{
+    background-color: transparent;
+    font-size: 2.4ex;
+    font-family: 'Montserrat', sans-serif;
+}
