--- a/public/templates/category.hbs
+++ b/public/templates/category.hbs
@@ -7,15 +7,12 @@
   {{#each products}}
     <div class="panel panel-simple">
       <div class="panel-body">
-        <h4 class="category-name">
-          <img src="{{thumbnail}}" class="img-rounded" height="30"/>
+        <h4 class="product-name">
+          <img src="{{thumbnail}}" class="panel-img-product" height="30"/>
           <span class="overflow-wrapper">
             <a href="/#/products/{{id}}">{{name}}</a>
           </span>
         </h4>
-      </div>
-      <div class="panel-footer clearfix">
-        <span class="panel-footer-count pull-right"># of Reviews</span>
       </div>
     </div>
   {{/each}}
