--- a/public/templates/product-search.hbs
+++ b/public/templates/product-search.hbs
@@ -8,17 +8,14 @@
   <h4>Product results for <b><em>{{query}}</em></b></h4>
 
   {{#each searchResults}}
-    <div class="panel panel-default">
+    <div class="panel panel-simple">
       <div class="panel-body">
-        <h4 class="category-name">
-          <img src="{{thumbnail}}" class="img-rounded" height="30"/>
+        <h4 class="product-name">
+          <img src="{{thumbnail}}" class="panel-img-product" height="30"/>
           <span class="overflow-wrapper">
             <a href="/#/products/{{id}}">{{name}}</a>
           </span>
         </h4>
-      </div>
-      <div class="panel-footer clearfix">
-        <span class="badge badge-green"># of Reviews</span>
       </div>
     </div>
   {{else}}
